# simplicity-puzzle-hunt

./: .gitignore  CLAUDE.md  COMO_USAR.md  Cargo.toml  GUIA_TESTE_LOCAL.md  PITCH.md  QUICKSTART.md  README.md  SUCESSO_TESTE.md  check-puzzle.sh  config.example.env  elements-cli  elements-cli.sh  git-setup.sh  list-puzzles.sh  setup-private-repo.sh
SimplicityHL/examples/: puzzle_chain.simf  puzzle_chain_timelock.simf  puzzle_consolidation.simf  puzzle_jackpot.simf  puzzle_jackpot_consolidation.simf
