[package]
name = "puzzle-hunt"
version = "0.1.0"
edition = "2021"

[workspace]
# This is an independent workspace

[[bin]]
name = "create-puzzle"
path = "src/bin/create_puzzle.rs"

[[bin]]
name = "solve-puzzle"
path = "src/bin/solve_puzzle.rs"

# Moved to bkp/ folder:
# - add-to-pot
# - export-program
# - list-puzzles
# - verify-puzzle
# - check-contract
# - create-puzzle-with-fee
# - solve-puzzle-with-fee
# - create-puzzle-salted
# - solve-puzzle-salted

[dependencies]
serde = { version = "1.0", features = ["derive"] }
simplicity = { package = "simplicity-lang", version = "0.5.0" }
simplicityhl = { path = "../SimplicityHL" }
elements = "0.25.2"
elementsd = "0.8"
bitcoincore-rpc = "0.14"
secp256k1 = { package = "secp256k1-zkp", version = "0.11" }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
anyhow = "1.0"
base64 = "0.22"
rand = "0.8"
chrono = "0.4"
